# MastersGroupProject2023

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PS4.sln  README.md  ThingsToDo.txt  bash.exe.stackdump
CSC8503/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AnimatedRenderObject.cpp  AnimatedRenderObject.h  Billboard.cpp  Billboard.h  BloomRPass.cpp  BloomRPass.h  Bomb.h  Bonus.cpp  Bonus.h  Boss.cpp  Boss.h  BossBullet.cpp  BossBullet.h  Bullet.cpp  Bullet.h  BulletInstanceManager.cpp  BulletInstanceManager.h  Button.cpp  Button.h  CMakeCache.txt  CMakeLists.txt  CSC8507.sln  CombineRPass.cpp  CombineRPass.h  DebugRPass.cpp  DebugRPass.h  DebugViewPoint.cpp  DebugViewPoint.h  EnemyObject.cpp  EnemyObject.h  GBufferRPass.cpp  GBufferRPass.h  GameGrid.cpp  GameGrid.h  GameGridManager.cpp  GameGridManager.h  GameLevel.h  GameStateManager.cpp  (+110 more)
CSC8503/CSC8503/: CSC8503.vcxproj  CSC8503.vcxproj.filters  cmake_install.cmake
CSC8503/CSC8503CoreClasses/: CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  cmake_install.cmake
CSC8503/NCLCoreClasses/: NCLCoreClasses.vcxproj  NCLCoreClasses.vcxproj.filters  cmake_install.cmake
CSC8503/OpenGLRendering/: OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters  cmake_install.cmake
CSC8503CoreClasses/: AABBVolume.h  AssetLibrary.cpp  AssetLibrary.h  BehaviourAction.h  BehaviourInvertor.h  BehaviourNode.h  BehaviourNodeWithChildren.h  BehaviourParallel.h  BehaviourSelector.cpp  BehaviourSelector.h  BehaviourSequence.cpp  BehaviourSequence.h  CMakeLists.txt  CapsuleVolume.cpp  CapsuleVolume.h  Collision.h  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.cpp  CollisionVolume.h  Constraint.h  Debug.cpp  Debug.h  DebugViewPoint.cpp  DebugViewPoint.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  InputKeyMap.cpp  InputKeyMap.h  Light.cpp  Light.h  NavigationGrid.cpp  NavigationGrid.h  NavigationMap.h  (+41 more)
CSC8503CoreClasses/enet/: enet.h  win32.c
Common/: AABBVolume.h  Assets.cpp  Assets.h  BehaviourAction.h  BehaviourInvertor.h  BehaviourNode.h  BehaviourNodeWithChildren.h  BehaviourParallel.h  BehaviourParallelSelector.h  BehaviourSelector.h  BehaviourSequence.h  Camera.cpp  Camera.h  CapsuleVolume.h  Collision.h  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.cpp  CollisionVolume.h  Common.vcxproj  Common.vcxproj.filters  Constraint.h  Debug.cpp  Debug.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  Light.cpp  Light.h  Maths.cpp  Maths.h  Matrix3.cpp  Matrix4.cpp  Matrix4.h  MeshAnimation.cpp  MeshGeometry.cpp  MeshGeometry.h  NavigationGrid.cpp  NavigationGrid.h  (+39 more)
NCLCoreClasses/: AssetLibrary.cpp  AssetLibrary.h  AssetLoader.cpp  AssetLoader.h  Assets.cpp  Assets.h  BufferObjectBase.cpp  BufferObjectBase.h  CMakeLists.txt  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GameTimer.cpp  GameTimer.h  HudBase.h  ICombineRenderPass.h  IMainRenderPass.h  IOverlayRenderPass.h  IPostRenderPass.h  IPresentRenderPass.h  IRenderPass.h  Keyboard.cpp  Keyboard.h  LoadingManager.h  Maths.cpp  Maths.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  MeshAnimation.cpp  MeshAnimation.h  MeshGeometry.cpp  MeshGeometry.h  MeshMaterial.cpp  MeshMaterial.h  Mouse.cpp  (+35 more)
ORBIS_Debug/: DebugLines_VertexShader.sb  DebugText_PixelShader.sb  DebugText_VertexShader.sb  PaintPixelShader.sb
OpenGLRendering/: CMakeLists.txt  OGLBufferObject.cpp  OGLBufferObject.h  OGLCombineRenderPass.cpp  OGLCombineRenderPass.h  OGLComputeShader.cpp  OGLComputeShader.h  OGLFrameBuffer.cpp  OGLFrameBuffer.h  OGLLoadingManager.cpp  OGLLoadingManager.h  OGLMainRenderPass.cpp  OGLMainRenderPass.h  OGLMesh.cpp  OGLMesh.h  OGLOverlayRenderPass.cpp  OGLOverlayRenderPass.h  OGLPostRenderPass.cpp  OGLPostRenderPass.h  OGLPresentRenderPass.cpp  OGLPresentRenderPass.h  OGLRenderPass.cpp  OGLRenderPass.h  OGLRenderer.cpp  OGLRenderer.h  OGLRendererConfig.cpp  OGLRendererConfig.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h
OpenGLRendering/glad/: glad.h
PS4Starter/: Boss.cpp  Boss.h  BossBullet.cpp  BossBullet.h  Bullet.cpp  Bullet.h  BulletInstanceManager.cpp  BulletInstanceManager.h  DebugText_PixelShader.pssl  ExampleRenderer.cpp  ExampleRenderer.h  GameGrid.cpp  GameGrid.h  GameGridManager.cpp  GameLevel.h  GameStateManager.cpp  Health.h  InkEffectManager.cpp  InkEffectManager.h  InputKeyMap.cpp  InputKeyMap.h  Obstacle.h  PS4Renderer.cpp  PS4Renderer.h  PS4Starter.vcxproj  PS4Starter.vcxproj.filters  PlayerBullet.cpp  PlayerBullet.h  PlayerObject.cpp  PlayerObject.h  RenderObject.cpp  RenderObject.h  TutorialGame.cpp  TutorialGame.h  main.cpp
Plugins/PlayStation4/: CMakeLists.txt  PS4Camera.cpp  PS4Camera.h  PS4Frame.cpp  PS4Frame.h  PS4Input.cpp  PS4Input.h  PS4InputManager.cpp  PS4InputManager.h  PS4MemoryAware.cpp  PS4Mesh.cpp  PS4Mesh.h  PS4Renderer.cpp  PS4Renderer.h  PS4RendererBase.cpp  PS4RendererBase.h  PS4Shader.cpp  PS4Shader.h  PS4Sound.cpp  PS4Sound.h  PS4Texture.cpp  PS4Texture.h  PS4Window.h  PlayStation4.vcxproj  PlayStation4.vcxproj.filters  Ps4AudioEmitter.h  Ps4AudioSystem.h
Plugins/PlayStation4/ORBIS_Debug/: _IsIncrementalBuild
Shaders/: test.frag  test.vert
VulkanRendering/: CMakeLists.txt  LICENSE  Precompiled.cpp  Precompiled.h  SmartTypes.h  VulkanBVHBuilder.cpp  VulkanBVHBuilder.h  VulkanBuffers.cpp  VulkanBuffers.h  VulkanCompute.cpp  VulkanCompute.h  VulkanComputePipelineBuilder.cpp  VulkanComputePipelineBuilder.h  VulkanDescriptorSetLayoutBuilder.cpp  VulkanDescriptorSetLayoutBuilder.h  VulkanDynamicRenderBuilder.cpp  VulkanDynamicRenderBuilder.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanRTShader.cpp  VulkanRTShader.h  VulkanRenderPassBuilder.cpp  VulkanRenderPassBuilder.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderBuilder.cpp  VulkanShaderBuilder.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  VulkanUtils.h  vk_layer_settings.txt
lib/: CMakeLists.txt
(+237 files in other folders)
